# social-net

./: .env  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yml  swagger.yml
.github/configs/: grcov.yml
.github/workflows/: build.yml  ci.yml  coverage.yml
migrations/2020-05-31-085059_create_users/: up.sql
src/: echo.rs  main.rs  ping.rs  router.rs  schema.rs  test_helpers.rs
src/auth/: mod.rs  user.rs  user_handler.rs  user_repo.rs  user_view.rs
src/handlers/: echo.rs  ping.rs  user.rs
src/models/: user.rs
src/user/: handler.rs  mod.rs  model.rs  repository.rs  view.rs
src/views/: mod.rs  user_view.rs
