[package]
name = "social-net"
version = "0.1.0"
authors = ["gahan.rakholia <gahan.rakholia@go-jek.com>"]
edition = "2018"

[profile.release]
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2"] }
dotenv = "0.15.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
